# nuclear-agent

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  PACKAGE_README.md  PROJECT_REVIEW.md  README.md  RECOVERY_REPORT.md  WORKTREE_LOG_2026-03-13.md  deny.toml  install  install.cmd  install.ps1  package-lock.json  package.json  playwright.config.cjs  security_best_practices_report.md
.github/workflows/: finalize-release.yml  verify-workspace.yml
benchmarks/coding-smoke/: protocol-summary.schema.json  tasks.jsonl
benchmarks/release-eval/: patch-plan.schema.json  repo-map.schema.json  review-findings.schema.json  tasks.jsonl
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: cli_support.rs  config_cli.rs  connector_cli.rs  connector_management_cli.rs  connector_support.rs  integrations_cli.rs  interactive_commands.rs  interactive_ui.rs  main.rs  onboarding_cli.rs  operations_cli.rs  plugins_cli.rs  provider_auth.rs  repo_cli.rs  session_support.rs  skills_cli.rs  test_support.rs  tests.rs  tui.rs  update_cli.rs
crates/agent-cli/src/cli/: mod.rs  runtime.rs  types.rs
crates/agent-cli/src/cli/runtime/: admin.rs  boot.rs  chat.rs  system.rs  tests.rs
crates/agent-cli/src/cli/runtime/tests/: cases_a.rs  cases_b.rs  cases_c.rs
crates/agent-cli/src/tui/: app.rs  events.rs  render.rs  terminal.rs
crates/agent-cli/src/tui/app/: actions.rs  connector_pickers.rs  pickers.rs  runtime_pickers.rs  settings_pickers.rs  slash_commands.rs  state.rs  support.rs  tests.rs
crates/agent-core/: Cargo.toml
crates/agent-core/src/: app_config.rs  connectors.rs  control.rs  foundation.rs  lib.rs  plugins.rs  requests.rs  runtime.rs  safety.rs  tests.rs  workspace.rs
crates/agent-daemon/: Cargo.toml
crates/agent-daemon/src/: auth.rs  connectors.rs  control.rs  control_socket.rs  dashboard.rs  delegation.rs  lib.rs  main.rs  memory.rs  missions.rs  patch.rs  patterns.rs  plugins.rs  routes.rs  runtime.rs  sessions.rs  support_bundle.rs  tools.rs  update.rs  workspace.rs
crates/agent-daemon/src/connectors/: admin.rs  approvals.rs  discord.rs  gmail.rs  home_assistant.rs  inbox.rs  runtime_registry.rs  signal.rs  slack.rs  telegram.rs  webhook.rs
crates/agent-daemon/src/control/: bootstrap.rs  operations.rs  providers.rs  system.rs  update.rs
crates/agent-daemon/src/memory/: embeddings.rs  guidance.rs  learning.rs  types.rs
crates/agent-daemon/src/missions/: prompt.rs  watch.rs
crates/agent-daemon/src/tools/: admin_helpers.rs  argument_helpers.rs  connector_tools.rs  delegation_tools.rs  dynamic_tools.rs  filesystem_tools.rs  path_helpers.rs  process_tools.rs  remote_content.rs
crates/agent-daemon/src/tools/connector_tools/: brave_tools.rs  home_assistant_tools.rs  messaging.rs
crates/agent-daemon/static/: dashboard-chat.js  dashboard-connectors.js  dashboard-control.js  dashboard-core-chat.js  dashboard-core-foundation.js  dashboard-core.js  dashboard-plugins.js  dashboard-providers.js  dashboard-settings.js  dashboard-workspace.js  dashboard.css  dashboard.html  dashboard.js
crates/agent-daemon/static-modern/: index.html
crates/agent-daemon/static-modern/.vite/: manifest.json
crates/agent-daemon/static-modern/assets/: index-8DUPPIAT.css  index-8esCtScQ.js  index-B05JYYua.css  index-B1KRP9CM.js  index-B5jpT4Sd.css  index-B61aJNdU.css  index-BGps8dd9.js  index-BR8Y4Sut.css  index-BSZ8lAta.js  index-BaWvhsA4.js  index-CtRvMAfR.js  index-D-ezWV3k.css  index-DGOS_Qj0.js  index-DlORl4oL.js  index-iRwVPsh-.js
crates/agent-policy/: Cargo.toml
crates/agent-policy/src/: lib.rs
crates/agent-providers/: Cargo.toml
crates/agent-providers/src/: anthropic.rs  attachments.rs  chatgpt_codex.rs  chatgpt_codex_catalog.rs  chatgpt_codex_models.rs  common.rs  keyring_store.rs  lib.rs  model_listing.rs  models.rs  oauth.rs  ollama.rs  openai_compatible.rs  tests.rs  tooling.rs  tools.rs
crates/agent-storage/: Cargo.toml
crates/agent-storage/src/: approvals.rs  helpers.rs  lib.rs  logs.rs  memory.rs  migrations.rs  missions.rs  paths.rs  patterns.rs  plugins.rs  schema.rs  session_input.rs  session_persistence_tests.rs  session_summary.rs  sessions.rs  skills.rs  tests.rs
docs/: benchmarks.md  beta-release-notes.md  dashboard-parity-matrix.md  dashboard-visual-concepts.md  dependency-policy.md  development-handoff.md  ga-release-notes.md  harness.md  operations.md  plugins.md  release-checklist.md  reliability.md  security-alert-remediation.md
harness/fixtures/bounded_refactor/: fix.patch  script.json  text_utils.py
harness/fixtures/config_migration/: config_loader.py  fix.patch  script.json
harness/fixtures/docs_code_sync/: README.md  fix.patch  script.json
harness/schemas/: coding-task.schema.json  patch-plan.schema.json  protocol-summary.schema.json  provider-profile.schema.json  repo-map.schema.json  review-findings.schema.json
harness/tasks/coding/: tasks.json
scripts/: capture-dashboard-visuals.cjs  check-max-loc.ps1  check-max-loc.sh  check-workspace-dependency-drift.py  common.ps1  ed25519_sign_hook.py  finalize-release.ps1  finalize-release.sh  generate_provenance.py  generate_sbom.py  install-smoke.ps1  install-smoke.sh  max-loc-baseline.txt  package-release.ps1  package-release.sh  phase1_smoke.py  phase2_matrix.py  phase2_smoke.py  release-main.ps1  release-main.sh  require_green_ga.py  rollback-install.ps1  rollback-install.sh  run-bench.ps1  run-bench.sh  run-harness.ps1  run-harness.sh  run-soak.cjs  run-soak.ps1  run-soak.sh  run_bench.py  run_harness.py  sign_artifacts.py  support-bundle-smoke.ps1  support-bundle-smoke.sh  support_bundle_smoke.py  verify-beta.ps1  verify-beta.sh  verify-ga.ps1  verify-ga.sh  (+11 more)
scripts/harness/: __init__.py  artifacts.py  bootstrap.py  common.py  evaluator.py  provider_adapters.py  tasks.py
scripts/tests/: test_harness_sanitization.py  test_require_green_ga.py
tests/dashboard-e2e/: coordinator.cjs  dashboard.spec.cjs  dashboard.visual.spec.cjs  helpers.cjs  modern-dashboard.spec.cjs
ui/dashboard/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+115 files in other folders)
