[workspace]
members = [
    "crates/agent-cli",
    "crates/agent-core",
    "crates/agent-daemon",
    "crates/agent-policy",
    "crates/agent-providers",
    "crates/agent-storage",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
arboard = "3.6.1"
auto-launch = "0.6.0"
axum = { version = "0.8.8", features = ["macros"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
clap_complete = "4.5.61"
crossterm = "0.29.0"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }
directories = "6.0.0"
futures = "0.3.31"
jsonschema = "0.18.3"
ratatui = "0.30.0"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls", "stream"] }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
webbrowser = "1.0.6"
