[package]
name = "autism"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-daemon = { path = "../agent-daemon" }
agent-core = { path = "../agent-core" }
agent-policy = { path = "../agent-policy" }
agent-providers = { path = "../agent-providers" }
agent-storage = { path = "../agent-storage" }
anyhow.workspace = true
arboard.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
crossterm.workspace = true
dialoguer.workspace = true
futures.workspace = true
ratatui.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
webbrowser.workspace = true
