[package]
name = "agent-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
agent-policy = { path = "../agent-policy" }
agent-providers = { path = "../agent-providers" }
agent-storage = { path = "../agent-storage" }
anyhow.workspace = true
base64.workspace = true
axum.workspace = true
chrono.workspace = true
futures.workspace = true
jsonschema.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
