[package]
name = "agent-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agent-core = { path = "../agent-core" }
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
directories.workspace = true
keyring-core.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
url.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "0.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
dbus-secret-service-keyring-store = { version = "0.3.3", features = ["crypto-rust", "vendored"] }
linux-keyutils-keyring-store = "0.2.1"

[target.'cfg(target_os = "macos")'.dependencies]
apple-native-keyring-store = { version = "0.2.3", features = ["keychain"] }

[dev-dependencies]
tokio.workspace = true
